# SHAROQ

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bench_edge.rs  bench_sensors.rs  bench_static.rs
evaluation/: Evaluation.ipynb  results.txt
files/: homelabv3.ttl
src/: bin.rs  generator.rs  lib.rs  rewrite.rs
