[package]
name = "SHAROQ"
version = "0.1.0"
edition = "2021"

[lib]
name = "edge_rewrite"
path = "src/lib.rs"

[[bin]]
name = "edge_execute"
path = "src/bin.rs"

[dependencies]
roxi = { path = "../../../../Github/RoXi/lib" }
log = { version = "0.4"}
spargebra = "0.2.2"
bencher = "0.1.5"

[[bench]]
name = "bench_static"
harness = false

[[bench]]
name = "bench_sensors"
harness = false

[[bench]]
name = "bench_edge"
harness = false
